--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -28,7 +28,7 @@
                             <tbody>
                                 {volist name="templates" id="vo"}
                                 <tr>
-                                    <td><a href="{:url('admin/Templates/detail',['id'=>$vo.tid])}">{$vo.tname}</a> </td>
+                                    <td><a href="{:url('admin/Template/index',['id'=>$vo.tid])}">{$vo.tname}</a> </td>
                                     {if session('admin.is_super')==1}<td>{$vo.tuser}</td>{/if}
                                     <td>{$vo.count}</td>
                                     {if $vo.status==1}
@@ -55,7 +55,7 @@
                                             dataid="{$vo.id}" status="{$vo.status}">删除</a> </td>
                                     {/if}
                                     <td>
-                                        <a href="{:url('admin/Templates/detail',['id'=>$vo.tid])}"
+                                        <a href="{:url('admin/Template/index',['id'=>$vo.tid])}"
                                             class="btn btn-xs btn-success"><span
                                                 class="glyphicon glyphicon-list-alt"></span>数据</a>
                                     </td>
