--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -60,7 +60,7 @@
                 </form> -->
                 <div id="toolbar" class="btn-group">
                     <button id="btn_delete" type="button" class="btn btn-danger">
-                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+                        <span class="fa fa-remove" aria-hidden="true"></span>删除
                     </button>
                 </div>
                 <table id="table" data-search="true"
@@ -132,29 +132,33 @@
     });
 
     $("#btn_delete").click(function () {
-        if (!confirm("是否确认删除？"))
-            return;
         var rows = $('#table').bootstrapTable('getSelections');// 获得要删除的数据
         // rows 主要是为了判断是否选中，下面的else内容才是主要
         if (rows.length == 0) {
-            alert("请先选择要删除的记录!");
+            showErrorMsg("请先选择要删除的记录!");
             return;
         } else {
-            // 声明一个数组
-            var ids = new Array();
-            // 通过获得别选中的来进行遍历
-            $(rows).each(function () {
-                ids.push(this.id);
-            });
-            console.log(ids)
-            $.ajax({
-                url: "{:url('admin/Template/del')}",
-                data: "ids=" + ids,
-                type: "post",
-                dataType: "json",
-                success: function (data) {
-                    $('#table').bootstrapTable('refresh');
-                }
+            layer.confirm('确定删除吗？', {
+                title: '删除任务',
+                icon: 3
+            }, function (index) {
+                // 声明一个数组
+                var ids = new Array();
+                // 通过获得别选中的来进行遍历
+                $(rows).each(function () {
+                    ids.push(this.id);
+                });
+                console.log(ids)
+                $.ajax({
+                    url: "{:url('admin/Template/del')}",
+                    data: "ids=" + ids,
+                    type: "post",
+                    dataType: "json",
+                    success: function (data) {
+                        showMsg("删除成功！")
+                        $('#table').bootstrapTable('refresh');
+                    }
+                })
             })
         }
     });
