--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -59,7 +59,7 @@
                         </label>
                     </div> -->
                                 </form>
-                                <button class="btn project-btn initTemplate" type="button"><span
+                                <button class="btn btn-success initTemplate" type="button"><span
                                         class="fa fa-table"></span>
                                     初始化模板</button>
                             </div>
