--- a/application/admin/view/import/create_template_second.html
+++ b/application/admin/view/import/create_template_second.html
@@ -2,24 +2,8 @@
 
 {block name="title"}完善模板信息{/block}
 {block name="page-style"}
-<link href="__CSS__/mysite.css" rel="stylesheet">
+<link href="__CSS__/main.css" rel="stylesheet">
 <style>
-.login-area {
-            color: white;
-            font-size: 16px;
-        }
-
-        .login-area span {
-            margin-left: 10px;
-        }
-        .login-area a{
-            color:white;
-            text-decoration: none;
-        }
-        .login-area a:hover {
-            text-decoration: underline;
-        }
-
     .form-inline {
         margin-top: 10px;
     }
@@ -113,7 +97,7 @@
 </style>
 {/block}
 {block name="page-main"}
-<div class="container project-team-container">
+<div class="project-team-container">
     <div class="bg-themeprimary widget-header">
         <span class="widget-caption">第二步：完善表单</span>
     </div>
@@ -187,7 +171,7 @@
                             </label>
                         </div>
                     </form>
-                    <button class="btn project-btn initTemplate" type="button"><span class="fa fa-table"></span>
+                    <button class="btn btn-success initTemplate" type="button"><span class="fa fa-table"></span>
                         初始化模板</button>
                 </div>
             </div>
