--- a/application/admin/view/import/create_template_third.html
+++ b/application/admin/view/import/create_template_third.html
@@ -3,29 +3,10 @@
 {block name="title"}完善模板信息{/block}
 
 {block name="page-style"}
-<link href="__CSS__/mysite.css" rel="stylesheet">
-
-<style>
-    .login-area {
-                color: white;
-                font-size: 16px;
-            }
-    
-            .login-area span {
-                margin-left: 10px;
-            }
-            .login-area a{
-                color:white;
-                text-decoration: none;
-            }
-            .login-area a:hover {
-                text-decoration: underline;
-            }
-    
-    </style>
+<link href="__CSS__/main.css" rel="stylesheet">
 {/block}
 {block name="page-main"}
-<div class="container project-team-container">
+<div class="project-team-container">
     <div class="bg-themeprimary widget-header">
         <span class="widget-caption">第三步：分享表单</span>
     </div>
