--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -2,28 +2,10 @@
 
 {block name="title"}导入模板文件{/block}
 {block name="page-style"}
-<link href="__CSS__/mysite.css" rel="stylesheet">
-<style>
-.login-area {
-            color: white;
-            font-size: 16px;
-        }
-
-        .login-area span {
-            margin-left: 10px;
-        }
-        .login-area a{
-            color:white;
-            text-decoration: none;
-        }
-        .login-area a:hover {
-            text-decoration: underline;
-        }
-
-</style>
+<link href="__CSS__/main.css" rel="stylesheet">
 {/block}
 {block name="page-main"}
-<div class="container project-team-container">
+<div class="project-team-container">
     <div class="bg-themeprimary widget-header">
         <span class="widget-caption">第一步：导入文件</span>
     </div>
