--- a/application/admin/view/template/index.html
+++ b/application/admin/view/template/index.html
@@ -40,6 +40,7 @@
             <div class="bg-themeprimary widget-header">
                 <span class="widget-caption">{$template.tname}</span>
                 <div class="widget-buttons">{$admins|raw}</div>
+                
             </div>
             <div class="widget-body">
                 <!-- <form id="formSearch" class="form-horizontal">
@@ -59,6 +60,12 @@
                     </div>
                 </form> -->
                 <div id="toolbar" class="btn-group">
+                    <!-- <input type="text" class="btn btn-xs" value="{$vo.shareUrl}" name="{$vo.tid}"
+                    id="{$vo.tid}">
+                <a href="javascript:;" class="copy btn btn-xs fa fa-align-right" dataid="{$vo.tid}"><span
+                        class="glyphicon glyphicon-share-alt"></span>分享</a>
+                <a href="{$vo.shareUrl}" target="_blank" class="copy btn btn-xs btn-default"><span
+                        class="glyphicon glyphicon-eye-open"></span>查看任务</a> -->
                     <button id="btn_delete" type="button" class="btn btn-danger">
                         <span class="fa fa-remove" aria-hidden="true"></span>删除
                     </button>
