--- a/application/admin/view/import/create_template_first.html
+++ b/application/admin/view/import/create_template_first.html
@@ -7,6 +7,7 @@
 {block name="page-main"}
 <div class="project-team-container">
     <div class="bg-themeprimary widget-header">
+        <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Templates/add\')}';"/></i>
         <span class="widget-caption">第一步：导入文件</span>
     </div>
     <div class="widget-body">
