--- a/application/admin/view/admin/edit.html
+++ b/application/admin/view/admin/edit.html
@@ -8,6 +8,7 @@
         <div class="col-xs-12">
             <div class="widget radius-bordered">
                 <div class="widget-header bordered-bottom bordered-themeprimary">
+                     <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Admin/list\')}';"/></i>
                     <span class="widget-caption">用户修改</span>
                 </div>
                 <div class="widget-body">
