--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -8,6 +8,7 @@
         <div class="col-xs-12">
             <div class="widget">
                 <div class="widget-header">
+                    <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Home/index\')}';"/></i>
                     <span class="widget-caption">用户列表</span>
                     <div class="widget-buttons">
                         {$admins|raw}
