--- a/application/admin/view/hand/index.html
+++ b/application/admin/view/hand/index.html
@@ -17,10 +17,8 @@
     <div class="col-lg-12">
         <div class="widget">
             <div class="bg-themeprimary widget-header">
+                <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Templates/add\')}';"/></i>
                 <span class="widget-caption">手动创建表单</span>
-                <div class="widget-buttons">
-
-                </div>
             </div>
             <div class="widget-body">
                 <!-- style="background-color:rgba(45, 195, 232,0.25); padding: 20px;" -->
