--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet" />
     <link href="__CSS__/font-awesome.min.css" rel="stylesheet" />
-    <link href="__CSS__/weather-icons.min.css" rel="stylesheet" />
     <link id="beyond-link" href="__CSS__/beyond.min.css" rel="stylesheet" type="text/css" />
+    <link href="__CSS__/main.css" rel="stylesheet" type="text/css" />
     {block name="page-style"}
     <style>
         .login-area {
@@ -21,13 +21,19 @@
         .login-area span {
             margin-left: 10px;
         }
-        .login-area a{
-            color:white;
+
+        .login-area a {
+            color: white;
             text-decoration: none;
         }
+
         .login-area a:hover {
             text-decoration: underline;
         }
+
+        .navbar-account .account-area .login-area+.dropdown-menu {
+    min-width: 100px;
+}
     </style>
     {/block}
 </head>
@@ -54,6 +60,33 @@
                 <div class="navbar-header pull-right">
                     <div class="navbar-account">
                         <ul class="account-area">
+                            <li class="">
+                                <a class="login-area dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                    <div class="avatar">
+                                        <img src="__IMG__/moren.jpg" alt="" srcset="">
+                                    </div>
+                                    <section style="min-width:30px">
+                                        <h2><span class="profile"><span>{:session('admin.username')}</span></span>
+                                        </h2>
+                                    </section>
+                                </a>
+                                <!--Login Area Dropdown-->
+                                <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
+                                    <li class="dropdown-footer">
+                                        <a href="#" id="loginout">退出</a>
+                                    </li>
+                                </ul>
+                                <!--/Login Area Dropdown-->
+                            </li>
+                            <!-- /Account Area -->
+                            <!--Note: notice that setting div must start right after account area list.
+                            no space must be between these elements-->
+                            <!-- Settings -->
+                        </ul>
+                        <!-- Settings -->
+                    </div>
+                    <!-- <div class="navbar-account">
+                        <ul class="account-area">
                             <li>
                                 <div class="login-area">
                                     <span>{:session('admin.username')}</span>
@@ -61,7 +94,7 @@
                                 </div>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- /Account Area and Settings -->
             </div>
