--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -8,7 +8,8 @@
         <div class="widget radius-bordered">
             <div class="widget">
                 <div class="bg-themeprimary widget-header">
-                    <span class="widget-caption">选择添加方式</span>
+                <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Home/index\')}';"/></i>
+                <span class="widget-caption">选择添加方式</span>
                 </div>
                 <div class="widget-body">
                     <div class="row">
