--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -6,10 +6,9 @@
     <div class="col-xs-12">
         <div class="widget">
             <div class="widget-header bg-themeprimary">
+                <i class="fa fa-arrow-left widget-icon" onClick="window.location.href='{:url(\'admin/Home/index\')}';"/></i>
                 <span class="widget-caption">任务列表</span>
-                <div class="widget-buttons">
-
-                </div>
+                
             </div>
             <div class="widget-body">
                 <div class="table-responsive">
@@ -27,7 +26,7 @@
                         <tbody>
                             {volist name="templates" id="vo"}
                             <tr>
-                                <td><a href="{:url('admin/Template/index',['id'=>$vo.tid])}">{$vo.tname}</a> </td>
+                                <td><a href="{:url('admin/Template/index',['id'=>$vo.tid])}" style="font-size:14px">{$vo.tname}</a> </td>
                                 {if session('admin.is_super')==1}<td>{$vo.tuser}</td>{/if}
                                 <td>{$vo.count}</td>
                                 {if $vo.status==1}
